{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 580,
  "lineage": "67acc8ec-fe47-9f0f-5420-44cc2a7f5f3d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca991d84702e1b50",
            "arn": "arn:aws:ec2:us-east-1:796973501841:elastic-ip/eipalloc-0ca991d84702e1b50",
            "association_id": "eipassoc-0060293e4d330b096",
            "domain": "vpc",
            "id": "eipalloc-0ca991d84702e1b50",
            "instance": "i-05cafb335fad11ffb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09784cf388d81a92b",
            "private_dns": "ip-10-16-0-42.ec2.internal",
            "private_ip": "10.16.0.42",
            "public_dns": "ec2-13-216-60-81.compute-1.amazonaws.com",
            "public_ip": "13.216.60.81",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_security_group.nat-sg",
            "aws_subnet.public",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "pub-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c352269aa10fb43",
            "arn": "arn:aws:ec2:us-east-1:796973501841:elastic-ip/eipalloc-01c352269aa10fb43",
            "association_id": "eipassoc-04bf9d0a7e0bad6ae",
            "domain": "vpc",
            "id": "eipalloc-01c352269aa10fb43",
            "instance": "i-0590ee04fe707ce7e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-011ff132e4fa2f7f7",
            "private_dns": "ip-10-16-0-10.ec2.internal",
            "private_ip": "10.16.0.10",
            "public_dns": "ec2-52-5-154-51.compute-1.amazonaws.com",
            "public_ip": "52.5.154.51",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.public",
            "aws_security_group.ec2",
            "aws_security_group.lb_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04aa00acb1165b32a",
            "arn": "arn:aws:ec2:us-east-1:796973501841:instance/i-05cafb335fad11ffb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05cafb335fad11ffb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09784cf388d81a92b",
            "private_dns": "ip-10-16-0-42.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.16.0.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ef9f28474b81e75f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08f28038f6c41fb0f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e971a4cf7339f72a",
            "tags": {
              "Name": "nat-instance"
            },
            "tags_all": {
              "Name": "nat-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f28038f6c41fb0f"
            ]
          },
          "dependencies": [
            "aws_security_group.nat-sg",
            "aws_subnet.public",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08b5b3a93ed654d19",
            "arn": "arn:aws:ec2:us-east-1:796973501841:instance/i-0590ee04fe707ce7e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-profile",
            "id": "i-0590ee04fe707ce7e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-011ff132e4fa2f7f7",
            "private_dns": "ip-10-16-0-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.16.0.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02538feea7821e547",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0741eccb82191d5f2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e971a4cf7339f72a",
            "tags": {
              "Name": "public-instance"
            },
            "tags_all": {
              "Name": "public-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0741eccb82191d5f2"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.ec2",
            "aws_security_group.lb_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973501841:internet-gateway/igw-01db5033f4bfa0948",
            "id": "igw-01db5033f4bfa0948",
            "owner_id": "796973501841",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0fd97e9af17e0fb0b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:796973501841:loadbalancer/app/lb1/d08bf812af924037",
            "arn_suffix": "app/lb1/d08bf812af924037",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb1-1356947438.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:796973501841:loadbalancer/app/lb1/d08bf812af924037",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fc4d2429b7df5aee"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04f2e15ee9c7122ef"
              },
              {
                "subnet_id": "subnet-0e971a4cf7339f72a"
              }
            ],
            "subnets": [
              "subnet-04f2e15ee9c7122ef",
              "subnet-0e971a4cf7339f72a"
            ],
            "vpc_id": "vpc-0fd97e9af17e0fb0b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.private",
            "aws_subnet.private1",
            "aws_subnet.public",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:796973501841:targetgroup/tg/69a2fa72503f5058",
            "arn_suffix": "targetgroup/tg/69a2fa72503f5058",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:796973501841:targetgroup/tg/69a2fa72503f5058",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fd97e9af17e0fb0b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:796973501841:targetgroup/tg/69a2fa72503f5058-2025031114183269040000000e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:796973501841:targetgroup/tg/69a2fa72503f5058",
            "target_id": "i-0590ee04fe707ce7e"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.public",
            "aws_lb_target_group.tg",
            "aws_security_group.ec2",
            "aws_security_group.lb_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a7c8c684a9be32ca1080289494",
            "instance_id": "i-05cafb335fad11ffb",
            "instance_owner_id": "796973501841",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-09784cf388d81a92b",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a7c8c684a9be32ca",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.nat",
            "aws_route_table.rt-priv",
            "aws_security_group.nat-sg",
            "aws_subnet.public",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973501841:route-table/rtb-0a7c8c684a9be32ca",
            "id": "rtb-0a7c8c684a9be32ca",
            "owner_id": "796973501841",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt-priv"
            },
            "tags_all": {
              "Name": "rt-priv"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd97e9af17e0fb0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973501841:route-table/rtb-0c5f3e15e1ab40f23",
            "id": "rtb-0c5f3e15e1ab40f23",
            "owner_id": "796973501841",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01db5033f4bfa0948",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt"
            },
            "tags_all": {
              "Name": "rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd97e9af17e0fb0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a349f54095220b3f",
            "route_table_id": "rtb-0c5f3e15e1ab40f23",
            "subnet_id": "subnet-0e971a4cf7339f72a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt-pub",
            "aws_subnet.public",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5c592d8da127c9a",
            "route_table_id": "rtb-0a7c8c684a9be32ca",
            "subnet_id": "subnet-034856a4e031dc650"
          },
          "dependencies": [
            "aws_route_table.rt-priv",
            "aws_subnet.private",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973501841:security-group/sg-0e217e2ad75cf97c0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e217e2ad75cf97c0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0741eccb82191d5f2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20250311141816598700000009",
            "name_prefix": "terraform-",
            "owner_id": "796973501841",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database-sg"
            },
            "tags_all": {
              "Name": "database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd97e9af17e0fb0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2",
            "aws_security_group.lb_sg",
            "aws_subnet.private",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973501841:security-group/sg-0741eccb82191d5f2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0741eccb82191d5f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fc4d2429b7df5aee"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250311141811052500000008",
            "name_prefix": "terraform-",
            "owner_id": "796973501841",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server-sg"
            },
            "tags_all": {
              "Name": "web-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd97e9af17e0fb0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.private",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973501841:security-group/sg-0fc4d2429b7df5aee",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.16.0.64/26"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0fc4d2429b7df5aee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250311141805697500000004",
            "name_prefix": "terraform-",
            "owner_id": "796973501841",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "load-balancer-sg"
            },
            "tags_all": {
              "Name": "load-balancer-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd97e9af17e0fb0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973501841:security-group/sg-08f28038f6c41fb0f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f28038f6c41fb0f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250311141803451000000002",
            "name_prefix": "terraform-",
            "owner_id": "796973501841",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fd97e9af17e0fb0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973501841:subnet/subnet-034856a4e031dc650",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.16.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034856a4e031dc650",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "796973501841",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-0fd97e9af17e0fb0b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973501841:subnet/subnet-04f2e15ee9c7122ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.16.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f2e15ee9c7122ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "796973501841",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-0fd97e9af17e0fb0b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973501841:subnet/subnet-0e971a4cf7339f72a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e971a4cf7339f72a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "796973501841",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-0fd97e9af17e0fb0b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796973501841:vpc/vpc-0fd97e9af17e0fb0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.16.0.0/24",
            "default_network_acl_id": "acl-05848daa5c1ff500d",
            "default_route_table_id": "rtb-057a4c1ffaa646d9e",
            "default_security_group_id": "sg-08f1d1e4f6624f997",
            "dhcp_options_id": "dopt-0f708cb42fc9f2e90",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fd97e9af17e0fb0b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-057a4c1ffaa646d9e",
            "owner_id": "796973501841",
            "tags": {
              "Name": "vpc1"
            },
            "tags_all": {
              "Name": "vpc1"
            }
          }
        }
      ]
    }
  ]
}